# monero-predict

./: .gitignore  CLAUDE.md  Cargo.toml  PROMPT.md  README.md  README_CUDA.md  TESTING.md  test_full_flow.sh  test_market.sh
.beads/: issues.jsonl
crates/fhe-client/: Cargo.toml
crates/fhe-client/src/: commitment.rs  crypto.rs  keys.rs  lib.rs  wasm.rs
src/: client.rs  coordinator.rs  fhe.rs  lib.rs  main.rs  types.rs
web-bettor/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
web-bettor/src/: app.css  app.html
web-bettor/src/lib/components/: Toast.svelte
web-bettor/src/lib/services/: coordinator.ts  fhe.ts  storage.ts  wallet.ts
web-bettor/src/lib/stores/: bets.ts  markets.ts  toast.ts  wallet.ts
web-bettor/src/lib/utils/: crypto.ts
web-bettor/src/lib/wasm/: monero_predict_fhe_client.d.ts  monero_predict_fhe_client.js  monero_predict_fhe_client_bg.wasm  monero_predict_fhe_client_bg.wasm.d.ts  package.json
web-bettor/src/lib/workers/: fhe-keygen.worker.ts  wallet.worker.ts
web-bettor/src/routes/: +layout.svelte  +page.svelte
web-bettor/src/routes/bets/: +page.svelte
web-bettor/src/routes/claim/[id]/: +page.svelte  +page.ts
web-bettor/src/routes/data/: +page.svelte
web-bettor/src/routes/markets/: +page.svelte  +page.ts
web-bettor/src/routes/markets/[id]/: +page.svelte  +page.ts
web-bettor/src/routes/setup/: +page.svelte
