[package]
name = "monero-predict"
version = "0.1.0"
edition = "2021"
default-run = "monero-predict"

[[bin]]
name = "bettor"
path = "src/bin/bettor.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[features]
default = []
gpu = []  # GPU acceleration via CUDA - requires manual tfhe build with GPU support

[dependencies]
sys-info = "0.9"
anyhow = "1.0.100"
axum = "0.8.6"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
monero = "0.21.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha3 = "0.10.8"
tfhe = { path = "../tfhe-rs/tfhe", features = ["integer", "gpu-experimental-multi-arch"] }  # SIMD automatically enabled on x86_64
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
