[package]
name = "monero-predict-fhe-client"
version = "0.1.0"
edition = "2021"

[lib]
# Dual-target: cdylib for WASM, rlib for native
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies (both targets)
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
sha3 = "0.10"
rand = "0.8"

# WASM-specific (optional, feature-gated)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tfhe = { version = "0.8", features = ["integer"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tfhe = { version = "0.8", features = ["high-level-client-js-wasm-api", "shortint-client-js-wasm-api"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "serde-wasm-bindgen"]

[profile.release]
# Optimize for size in WASM
opt-level = "z"
lto = true
